// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageDocumentCitation renders  component with a mock espace record 1`] = `
<div>
  <div
    class="citationContent citationImageDocument"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate"
    >
      (
      1955
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Reference Desk, Library
      .
    </span>
    <span
      class="citationSource"
    >
       
      Fryer Library University of Queensland Photograph Collection, UQFL466, Box 8, AG/P/108
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`ImageDocumentCitation renders  component with empty publication 1`] = `
<div>
  <div
    class="citationContent citationImageDocument"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationSource empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;
